# dumbadmin

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  flag  pyproject.toml  run.py  schema.sql
dumbadmin/: __init__.py  db.py  schema.sql  server.py  user.py  validate.py
dumbadmin/templates/: admin.html  index.html  layout.html  login.html  register.html
