[tool.poetry]
name = "dumbadmin"
version = "0.1.0"
description = ""
authors = ["Rendy Arya Kemal <renrror@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
quart = "^0.17.0"
pyppeteer = "^1.0.2"
aiosqlite = "^0.17.0"
validators = "^0.18.2"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
